sidux-manual (01.77.2008.11.20-2) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * move to bzip2 for dh_builddeb, while this isn't allowed in Debian until 
    lenny gets released, it does save a little package upload size.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 23 Nov 2008 21:00:02 +0100

sidux-manual (01.77.2008.11.20-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 21 Nov 2008 01:23:48 +0000

sidux-manual (01.77.2008.11.09-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 09 Nov 2008 13:58:29 +0000

sidux-manual (01.77.2008.11.08-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 09 Nov 2008 13:28:54 +0000

sidux-manual (01.76.2008.10.14-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 16 Oct 2008 11:25:31 +0000

sidux-manual (01.76.2008.10.09-1) unstable; urgency=low

  * New upstream release.
  * add new polish localisations.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 10 Oct 2008 21:35:06 +0000

sidux-manual (01.76.2008.09.22-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 22 Sep 2008 12:06:22 +0000

sidux-manual (01.76.2008.09.21-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 21 Sep 2008 18:40:53 +0200

sidux-manual (01.76.2008.09.19-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 19 Sep 2008 22:57:04 +0200

sidux-manual (01.76.2008.09.16-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 16 Sep 2008 23:25:57 +0000

sidux-manual (01.76.2008.09.09-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 10 Sep 2008 23:14:59 +0000
