@@ -3,13 +3,14 @@ Section: doc
 Priority: optional
 Maintainer: Kel Modderman <kel@otaku42.de>
 Uploaders: Joaquim Boura <x-un-i@sidux.com>, Stefan Lippers-Hollmann <s.l-h@gmx.de>
-Build-Depends: cdbs, debhelper (>= 7), patchutils
+Build-Depends: debhelper (>= 7), patchutils
 Standards-Version: 3.8.0
 Vcs-Svn: svn://svn.berlios.de/fullstory/sidux-manual/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/sidux-manual/trunk/
 
 Package: sidux-manual
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common,
          sidux-manual-da,
 	 sidux-manual-de,
@@ -44,6 +45,7 @@ Description: the official sidux manual - all languages
 
 Package: sidux-manual-common
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Recommends: www-browser | x-www-browser
 Description: the official sidux manual - common files
  This manual is divided into common sections, for example, a subject pertaining
@@ -63,6 +65,7 @@ Description: the official sidux manual - common files
 
 Package: sidux-manual-da
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Danish sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -80,6 +83,7 @@ Description: the official Danish sidux manual
 
 Package: sidux-manual-de
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official German sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -97,6 +101,7 @@ Description: the official German sidux manual
 
 Package: sidux-manual-el
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Greek sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -114,6 +119,7 @@ Description: the official Greek sidux manual
 
 Package: sidux-manual-en
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official English sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -131,6 +137,7 @@ Description: the official English sidux manual
 
 Package: sidux-manual-es
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Spanish sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -148,6 +155,7 @@ Description: the official Spanish sidux manual
 
 Package: sidux-manual-fr
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official French sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -165,6 +173,7 @@ Description: the official French sidux manual
 
 Package: sidux-manual-hr
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Croatian sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -182,6 +191,7 @@ Description: the official Croatian sidux manual
 
 Package: sidux-manual-it
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Italian sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -199,6 +209,7 @@ Description: the official Italian sidux manual
 
 Package: sidux-manual-ja
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common, ttf-kochi-gothic
 Description: the official Japanese sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -216,6 +227,7 @@ Description: the official Japanese sidux manual
 
 Package: sidux-manual-nl
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Dutch sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -233,6 +245,7 @@ Description: the official Dutch sidux manual
 
 Package: sidux-manual-pl
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Polish sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -250,6 +263,7 @@ Description: the official Polish sidux manual
 
 Package: sidux-manual-pt-br
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Brazilian Portuguese sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -267,6 +281,7 @@ Description: the official Brazilian Portuguese sidux manual
 
 Package: sidux-manual-ro
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Romanian sidux manual
  This manual is divided into common sections, for example, a subject pertaining
@@ -284,6 +299,7 @@ Description: the official Romanian sidux manual
 
 Package: sidux-manual-ru
 Architecture: all
+Pre-Depends: dpkg (>= 1.14.15)
 Depends: sidux-manual-common
 Description: the official Russian sidux manual
  This manual is divided into common sections, for example, a subject pertaining
