@@ -3,8 +3,9 @@ sidux-manual (01.77.2008.11.20-2) UNRELEASED; urgency=low
   * NOT RELEASED YET
   * move to bzip2 for dh_builddeb, while this isn't allowed in Debian until 
     lenny gets released, it does save a little package upload size.
+  * switch package from cdbs to debhelper 7/ dh.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 23 Nov 2008 21:00:02 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 24 Nov 2008 11:24:28 +0100
 
 sidux-manual (01.77.2008.11.20-1) unstable; urgency=low
 
